# app/Http/Controllers/BasicTodoList/TodoUpdateController.php
@@ -25,10 +25,10 @@ use Illuminate\Support\Facades\Validator;
  *     ),
  *     @OA\RequestBody(
  *         required=true,
- *         @OA\JsonContent(
- *             @OA\Property(property="name", type="string", description="Name of the todo", example="Learn Laravel"),
- *             @OA\Property(property="description", type="string", description="Description of the todo", example="Complete the Laravel tutorial"),
- *             @OA\Property(property="completed", type="boolean", description="Completion status of the todo", example=false),
+ *         description="Objeto de TODO a actualizar",
+ *         @OA\MediaType(
+ *            mediaType="application/x-www-form-urlencoded",
+ *            @OA\Schema(ref="#/components/schemas/Todo")
  *         )
  *     ),
  *     @OA\Response(
